# tree-sitter-org-mode

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  log.html  package.json  pyproject.toml  setup.py  test.org  test2.org  tree-sitter.json
bindings/c/: tree-sitter-orgmode.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_orgmode/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOrgmode/: orgmode.h
bindings/swift/TreeSitterOrgmodeTests/: TreeSitterOrgmodeTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
