[package]
name = "tree-sitter-orgmode"
description = "Emacs org-mode files"
version = "0.1.0"
authors = ["Zac Garby <me@zacgarby.co.uk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "orgmode"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zac-garby/tree-sitter-org-mode"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
